--- a/app/assets/stylesheets/_/_custom.scss
+++ b/app/assets/stylesheets/_/_custom.scss
@@ -12,6 +12,8 @@ $mex: (
 $wobble-bezier: cubic-bezier(.1,3,.75,0.5);
 $normal-bezier: cubic-bezier(.25,1,.5,1);
 
+$gutter: 15px;
+
 .burger {
   position: absolute;
   top: 0;
@@ -143,7 +145,7 @@ $normal-bezier: cubic-bezier(.25,1,.5,1);
     width: 100%;
     height: 100%;
     top: 0;
-    padding: 15px;
+    padding: $gutter;
     opacity: 0;
     background: $color;
     
@@ -173,8 +175,8 @@ $normal-bezier: cubic-bezier(.25,1,.5,1);
       position: absolute;
       height: 80px;
       width: 80px;
-      top: 15px;
-      left: 15px;
+      top: $gutter;
+      left: $gutter;
       background: white;
       cursor: pointer;
       z-index: 2;
@@ -210,7 +212,7 @@ $normal-bezier: cubic-bezier(.25,1,.5,1);
         width: 100%;
         font-size: 2.25em;
         text-align: center;
-        padding-bottom: 15px;
+        padding-bottom: $gutter;
         border-bottom: 4px solid white;
         
         @include respond-to(phone) { font-size: 2em; }
@@ -227,7 +229,7 @@ $normal-bezier: cubic-bezier(.25,1,.5,1);
         max-width: 960px;
         font-size: 1.5em;
         text-align: justify;
-        padding-top: 15px;
+        padding-top: $gutter;
         
         @include respond-to(phone) { font-size: 1.1em; }
       }
@@ -238,7 +240,7 @@ $normal-bezier: cubic-bezier(.25,1,.5,1);
         max-width: 400px;
         height: 64px;
         background: white;
-        margin-top: 15px;
+        margin-top: $gutter;
         color: $color;
         
         @include border-radius(8px);
