--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -105,27 +105,30 @@ header#navigation {
     position: fixed;
     cursor: pointer;
     background-color: transparent;
+    // top: 2 * $gutter;
+    top: $gutter;
+    right: 2 * $gutter;
     z-index: 4;
     
     @include respond-to(phone) {
       height: 50px;
       width: 50px;
-      top: -2.5px;
-      right: 10px;
+      // top: -2.5px;
+      // right: 10px;
     }
     
     @include respond-to(tablet) {
       height: 100px;
       width: 100px;
-      top: -5px;
-      right: 20px;
+      // top: -5px;
+      // right: 20px;
     }
     
     @include respond-to(desktop) {
       height: 150px;
       width: 150px;
-      top: -7.5px;
-      right: 30px;
+      // top: -7.5px;
+      // right: 30px;
     }
     
     @include user-select(none);
@@ -160,9 +163,9 @@ header#navigation {
     &.cross {
       @include transform(rotate(90deg));
     
-      @include respond-to(phone) { top: 10px; }
-      @include respond-to(tablet) { top: 20px; }
-      @include respond-to(desktop) { top: 30px; }
+      // @include respond-to(phone) { top: 10px; }
+      // @include respond-to(tablet) { top: 20px; }
+      // @include respond-to(desktop) { top: 30px; }
     }
     
     &.cross.closing, &.lines {
