--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -5,10 +5,11 @@ section#about {
     div#about-cards {
       position: absolute;
       width: calc(100% - 30px);
-      left: 15px;
-      top: 15px;
+      left: $gutter;
+      top: $gutter;
       
       // 100% - breadcrumb height - 30 - 15
+      // TODO: play with making this 100% always
       height: calc(100% - 109px);
       @include respond-to(phone) { height: calc(100% - 93px); }
       
@@ -26,7 +27,7 @@ section#about {
         text-align: center;
         position: absolute;
         left: -64px;
-        bottom: 15px;
+        bottom: $gutter;
         height: 64px;
         width: 64px;
         padding: 4px;
