--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -9,7 +9,7 @@ section#history {
       width: calc(100% - 80px);
       // mechanism width
       left: 60px;
-      top: 15px;
+      top: $gutter;
       
       @include card(darken(map-get($mex, purple), 10%));
     }
