--- a/app/views/pages/home/_contact.html.erb
+++ b/app/views/pages/home/_contact.html.erb
@@ -1,11 +1,23 @@
 <section id="contact" class="section">
   <div id="contact-container" class="section-container">
-    <div id="burger-container">
-      <div class="burger">
-        <i></i>
-        <i></i>
-        <i></i>
+    <div id="contact-content">
+      <div id="contact-anon">ANONYMOUS</div>
+      
+      <div id="contact-toggle">
+        <i class="anonymous"></i>
       </div>
+      
+      <input id="contact-return" type="text" placeholder="email, phone, etc." disabled>
+      
+      <textarea id="contact-message" placeholder="What would you like to say?"></textarea>
     </div>
+    
+    <!--<div id="burger-container">-->
+    <!--  <div class="burger">-->
+    <!--    <i></i>-->
+    <!--    <i></i>-->
+    <!--    <i></i>-->
+    <!--  </div>-->
+    <!--</div>-->
   </div>
 </section>
