--- a/app/assets/stylesheets/_/_custom.scss
+++ b/app/assets/stylesheets/_/_custom.scss
@@ -12,7 +12,9 @@ $mex: (
 $wobble-bezier: cubic-bezier(.1,3,.75,0.5);
 $normal-bezier: cubic-bezier(.25,1,.5,1);
 
+// Ensure this is in sync with custom.js
 $gutter: 15px;
+$radius: 8px;
 
 .burger {
   position: absolute;
@@ -152,7 +154,7 @@ $gutter: 15px;
     @include user-select(none);
     @include cursor-grab;
     @include transition(all, 1s, $normal-bezier, 0s);
-    @include border-radius(8px);
+    @include border-radius($radius);
     
     &.left {
       left: -150%;
@@ -173,8 +175,8 @@ $gutter: 15px;
     
     .card-tondo {
       position: absolute;
-      height: 80px;
-      width: 80px;
+      height: 128px;
+      width: 128px;
       top: $gutter;
       left: $gutter;
       background: white;
@@ -195,7 +197,7 @@ $gutter: 15px;
       }
       
       &.focus {
-        @include border-radius(16px);
+        @include border-radius($radius);
       }
     }
     
@@ -243,7 +245,7 @@ $gutter: 15px;
         margin-top: $gutter;
         color: $color;
         
-        @include border-radius(8px);
+        @include border-radius($radius);
         
         .contact-text-wrapper {
           position: relative;
