--- a/app/views/pages/home/_contact.html.erb
+++ b/app/views/pages/home/_contact.html.erb
@@ -1,15 +1,17 @@
 <section id="contact" class="section">
   <div id="contact-container" class="section-container">
     <div id="contact-content">
-      <div id="contact-anon">ANONYMOUS</div>
-      
-      <div id="contact-toggle">
-        <i class="anonymous"></i>
+      <div id="contact-anon" class="anonymous">
+        <div id="contact-anon-toggle">
+          <i></i>
+        </div>
+        
+        <div id="contact-anon-status">ANONYMOUS</div>
       </div>
       
-      <input id="contact-return" type="text" placeholder="email, phone, etc." disabled>
+      <input id="contact-response" type="text" placeholder="email, phone, etc." disabled>
       
-      <textarea id="contact-message" placeholder="What would you like to say?"></textarea>
+      <textarea id="contact-message" type="text" placeholder="What would you like to say?"></textarea>
     </div>
     
     <!--<div id="burger-container">-->
