--- a/app/views/pages/home/_history.html.erb
+++ b/app/views/pages/home/_history.html.erb
@@ -1,7 +1,7 @@
 <section id="history" class="section">
   <div id="history-container" class="section-container">
     <div id="history-cards">
-      <%= render("_/card", head: "My past", body: "Take a moment to familiarize yourself with myself.") %>
+      <%= render("_/card", head: "My Past", body: "Find out about where I've come from.") %>
       
       <%= render("_/card", head: "2017", body: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.") %>
       
