--- a/app/assets/stylesheets/pages/home/_contact.scss
+++ b/app/assets/stylesheets/pages/home/_contact.scss
@@ -36,6 +36,7 @@ section#contact {
           height: 48px;
           width: 100%;
           background: white;
+          cursor: pointer;
           
           @include border-radius(24px);
           
