--- a/app/assets/stylesheets/pages/home/_work.scss
+++ b/app/assets/stylesheets/pages/home/_work.scss
@@ -17,41 +17,71 @@ section#work {
     
     div#work-menu-toggle {
       position: absolute;
+      height: 64px;
+      width: 64px;
+      top: calc(100% - 2 * #{$gutter});
+      left: calc(100% - 2 * #{$gutter});
       background: white;
       border: 2px solid darken(map-get($mex, red), 30%);
       z-index: 2;
       cursor: pointer;
       
-      @include transform(translate(-50%,-50%));
-      @include transition(all, 1s, $normal-bezier, 0s);
+      @include transform(translate(-100%, -100%));
+      @include transition(all, 0.8s, $normal-bezier, 0s);
       @include border-radius(50%);
+      
+      &.focus {
+        top: 50%;
+        left: 50%;
+        
+        @include transform(translate(-50%, -50%));
+        @include transition(all, 0.4s, $normal-bezier, 0s);
+      }
+      
+      div.burger {
+        padding: 17.5%;
+        
+        i {
+          background: darken(map-get($mex, red), 15%);
+        }
+      }
     }
     
     div#work-menu {
       position: absolute;
+      top: 50%;
+      left: 50%;
       z-index: -1;
+      opacity: 0;
       
+      @include transform(translate(-50%,-50%));
       @include transition(all, 1s, $normal-bezier, 0s);
       
-      &.opened {
-        div#work-menu-petal-container {
-          background: rgba(255, 255, 255, 0.35);
-        
-          div.work-menu-petal {
-            opacity: 1;
-          }
-        }
+      &.focus {
+        z-index: 1;
+        opacity: 1;
       }
       
-      &.opened, &.opening, &.closing {
-        z-index: 1;
-      }
+      // &.opened {
+      //   div#work-menu-petal-container {
+      //     background: rgba(255, 255, 255, 0.35);
+        
+      //     div.work-menu-petal {
+      //       opacity: 1;
+      //     }
+      //   }
+      // }
+      
+      // &.opened, &.opening, &.closing {
+      //   z-index: 1;
+      // }
       
       div#work-menu-petal-container {
         position: relative;
         height: 100%;
         width: 100%;
-        background: transparent;
+        // background: transparent;
+        background: rgba(255, 255, 255, 0.35);
         
         @include transition(all, 1s, $normal-bezier, 0s);
         @include border-radius(50%);
@@ -62,7 +92,7 @@ section#work {
           background: white;
           border: 2px solid darken(map-get($mex, red), 10%);
           cursor: pointer;
-          opacity: 0;
+          // opacity: 0;
           // z-index: -1;
           
           @include transform(translate(-50%,-50%));
