--- a/app/views/pages/home/_work.html.erb
+++ b/app/views/pages/home/_work.html.erb
@@ -10,10 +10,14 @@
       <%= render("_/card", head: "Tell me what you think", contact: "CONTACT") %>
     </div>
     
-    <div id="work-menu-toggle" class="focus">
-      <i></i>
-      <i></i>
-      <i></i>
+    <div id="work-menu-toggle">
+      <!--<div id="work-menu-toggle-burger-container">-->
+        <div class="burger">
+          <i></i>
+          <i></i>
+          <i></i>
+        </div>
+      <!--</div>-->
     </div>
     
     <div id="work-menu" class="opened">
