--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -25,11 +25,21 @@
     </div>
     
     <div id="about-breadcrumbs">
-      <div><%= render "icons/about" %></div>
-      <div><%= render "icons/beard" %></div>
-      <div><%= render "icons/leigh" %></div>
-      <div><%= render "icons/hound" %></div>
-      <div><%= render "icons/contact" %></div>
+      <div class="about-breadcrumb">
+        <div><%= render "icons/about" %></div>
+      </div>
+      <div class="about-breadcrumb">
+        <div><%= render "icons/beard" %></div>
+      </div>
+      <div class="about-breadcrumb">
+        <div><%= render "icons/leigh" %></div>
+      </div>
+      <div class="about-breadcrumb">
+        <div><%= render "icons/hound" %></div>
+      </div>
+      <div class="about-breadcrumb">
+        <div><%= render "icons/contact" %></div>
+      </div>
     </div>
   </div>
 </section>
