--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -19,61 +19,35 @@ section#about {
     
     div#about-breadcrumbs {
       position: absolute;
-      bottom: $gutter;
-      left: 0;
-      width: 100%;
+      bottom: 2 * $gutter;
+      left: 2 * $gutter;
+      width: calc(100% - 4 * #{$gutter});
       
-      div {
-        display: inline-block;
-        text-align: center;
-        position: absolute;
-        left: -64px;
-        bottom: $gutter;
-        height: 64px;
-        width: 64px;
-        padding: 4px;
-        // TODO: get this padding working with wrapping in div, maybe put in custom.scss
-        // padding: 17.5%;
-        background: white;
-        // margin-bottom: 8px;
-        cursor: pointer;
+      div.about-breadcrumb {
+        left: calc(-64px - 2 * #{$gutter});
+        bottom: 0;
+        height: 80px;
+        width: 80px;
         
         @include border-radius(50%);
         @include transition(left, 1.5s, $normal-bezier, 0s);
-        @include transform(translateX(-50%));
+        
+        @include respond-to(tablet) {
+          height: 64px;
+          width: 64px;
+        }
         
         @include respond-to(phone) {
-          height: 48px;
-          width: 48px;
-          padding: 3px;
+          height: 56px;
+          width: 56px;
         }
         
-        svg {
-          stroke: map-get($mex, blue);
-        }
-        
-        &.hover {
-          background: darken(map-get($mex, blue), 15%);
-          border: 1px solid white;
-          
-          svg {
-            stroke: white;
-          }
-        }
-        
-        &.mousedown, &.active {
-          background: map-get($mex, blue);
-          border: 1px solid white;
-          
-          svg {
-            stroke: white;
-          }
-        }
+        @include circle-icon(map-get($mex, blue), darken(map-get($mex, blue), 15%));
         
         &.mousedown {
-          @include transform(translate(-50%,4px));
+          @include transform(translateY(4px));
           
-          @include respond-to(phone) { @include transform(translate(-50%,-24px)); }
+          @include respond-to(phone) { @include transform(translateY(-24px)); }
         }
       }
     }
