--- a/app/assets/stylesheets/pages/home/_work.scss
+++ b/app/assets/stylesheets/pages/home/_work.scss
@@ -62,78 +62,32 @@ section#work {
         opacity: 1;
       }
       
-      // &.opened {
-      //   div#work-menu-petal-container {
-      //     background: rgba(255, 255, 255, 0.35);
-        
-      //     div.work-menu-petal {
-      //       opacity: 1;
-      //     }
-      //   }
-      // }
-      
-      // &.opened, &.opening, &.closing {
-      //   z-index: 1;
-      // }
-      
       div#work-menu-petal-container {
         position: relative;
         height: 100%;
         width: 100%;
-        // background: transparent;
         background: rgba(255, 255, 255, 0.35);
         
         @include transition(all, 1s, $normal-bezier, 0s);
         @include border-radius(50%);
         
         div.work-menu-petal {
-          position: absolute;
-          text-align: center;
-          background: white;
-          border: 2px solid darken(map-get($mex, red), 10%);
-          cursor: pointer;
-          // opacity: 0;
-          // z-index: -1;
+          height: 112px;
+          width: 112px;
           
-          @include transform(translate(-50%,-50%));
+          @include transition(transform, 1s, $normal-bezier, 0s);
           @include border-radius(50%);
           
-          @include transition(all, 1s, $normal-bezier, 0s);
-          
-          &.hover {
-            background: darken(map-get($mex, red), 10%);
-            border: 2px solid white;
-            
-            div {
-              svg {
-                stroke: white;
-              }
-            }
+          @include circle-icon(darken(map-get($mex, red), 10%), darken(map-get($mex, red), 20%));
+        
+          @include respond-to(tablet) {
+            height: 80px;
+            width: 80px;
           }
           
-          &.mousedown, &.active {
-            background: darken(map-get($mex, red), 20%);
-            border: 2px solid white;
-            
-            div {
-              svg {
-                stroke: white;
-              }
-            }
-          }
-          
-          div {
-            // display: inline-block;
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            left: 0;
-            top: 0;
-            padding: 17.5%;
-            
-            svg {
-              stroke: darken(map-get($mex, red), 10%);
-            }
+          @include respond-to(phone) {
+            height: 64px;
+            width: 64px;
           }
         }
       }
