--- a/app/views/icons/_leigh.html.erb
+++ b/app/views/icons/_leigh.html.erb
@@ -1,4 +1,4 @@
-<svg width="100%" viewbox="0 0 400 400" class="icon-contact">
+<svg width="100%" viewbox="0 0 400 400">
   <path d="
     M 252 33
     L 237 15
