DRY buttons, add send button to contact section

--- a/app/assets/stylesheets/pages/home/_contact.scss
+++ b/app/assets/stylesheets/pages/home/_contact.scss
@@ -80,6 +80,14 @@ section#contact {
         
         @include border-radius($radius);
       }
+      
+      a.btn {
+        color: map-get($mex, orange);
+        
+        &.hover, &.mousedown {
+          color: white;
+        }
+      }
     }
     
     // div#burger-container {
