--- a/app/assets/stylesheets/_/_custom.scss
+++ b/app/assets/stylesheets/_/_custom.scss
@@ -146,6 +146,45 @@ $inscribed: 17.5%;
   width: 100%;
 }
 
+a.btn {
+  display: inline-block;
+  width: 100%;
+  max-width: 400px;
+  height: 64px;
+  background: white;
+  
+  @include border-radius($radius);
+  
+  &.hover {
+    background: transparent;
+    border: 4px solid white;
+    // color: white;
+  }
+  
+  &.mousedown {
+    border: 4px solid white;
+    // color: white;
+    background: rgba(0,0,0,0.1);
+    
+    @include transform(translateY(4px));
+  }
+  
+  div.btn-txt-wrapper {
+    position: relative;
+    width: 100%;
+    top: 50%;
+    
+    @include transform(translateY(-50%));
+    
+    span.btn-txt {
+      display: inline-block;
+      width: 100%;
+      font-size: 2em;
+      text-align: center;
+    }
+  }
+}
+
 @mixin card($color) {
   .card {
     position: absolute;
@@ -217,68 +256,31 @@ $inscribed: 17.5%;
       .card-head {
         display: inline-block;
         width: 100%;
-        font-size: 2.25em;
+        font-size: 3.5em;
         text-align: center;
         padding-bottom: $gutter;
         border-bottom: 4px solid white;
         
         @include respond-to(phone) { font-size: 2em; }
-        
-        &.make-space {
-          // padding-right: 15%;
-          // text-align: right;
-        }
       }
       
       .card-body {
         display: inline-block;
         width: 100%;
         max-width: 960px;
-        font-size: 1.5em;
+        font-size: 2em;
         text-align: justify;
         padding-top: $gutter;
         
         @include respond-to(phone) { font-size: 1.1em; }
       }
       
-      .btn-contact {
-        display: inline-block;
-        width: 100%;
-        max-width: 400px;
-        height: 64px;
-        background: white;
+      a.btn {
         margin-top: $gutter;
         color: $color;
         
-        @include border-radius($radius);
-        
-        .contact-text-wrapper {
-          position: relative;
-          width: 100%;
-          top: 50%;
-          
-          @include transform(translateY(-50%));
-          
-          .contact-text {
-            display: inline-block;
-            width: 100%;
-            font-size: 2em;
-            text-align: center;
-          }
-        }
-        
-        &.hover {
-          background: transparent;
-          border: 4px solid white;
+        &.hover, &.mousedown {
           color: white;
-        }
-        
-        &.mousedown {
-          border: 4px solid white;
-          color: white;
-          background: rgba(0,0,0,0.1);
-          
-          @include transform(translateY(4px));
         }
       }
     }
