--- a/app/views/pages/home/_contact.html.erb
+++ b/app/views/pages/home/_contact.html.erb
@@ -12,14 +12,8 @@
       <input id="contact-response" type="text" placeholder="email, phone, etc." disabled>
       
       <textarea id="contact-message" type="text" placeholder="What would you like to say?"></textarea>
+      
+      <%= render("_/btn", text: "SEND") %>
     </div>
-    
-    <!--<div id="burger-container">-->
-    <!--  <div class="burger">-->
-    <!--    <i></i>-->
-    <!--    <i></i>-->
-    <!--    <i></i>-->
-    <!--  </div>-->
-    <!--</div>-->
   </div>
 </section>
