--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -1,5 +1,5 @@
 section#history {
-  background: map-get($mex, purple);
+  background: $base-purple;
   
   div#history-container {
     div#history-cards {
@@ -11,7 +11,7 @@ section#history {
       left: 60px;
       top: $gutter;
       
-      @include card(darken(map-get($mex, purple), 10%));
+      @include card($alt-purple);
     }
     
     div#history-mechanism {
@@ -27,7 +27,7 @@ section#history {
         position: absolute;
         top: 0;
         left: 50%;
-        background: darken(map-get($mex, purple), 10%);
+        background: $alt-purple;
         height: 100%;
         width: 20px;
         border: 4px solid white;
